--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cheerio": "^0.22.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "get-urls": "^10.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
+    "node-fetch": "^2.6.1",
+    "nodejs-web-scraper": "^6.0.1",
     "nodemon": "^2.0.7",
+    "puppeteer": "^10.1.0",
+    "puppeteer-core": "^10.1.0",
+    "request": "^2.88.2",
+    "sanitize-filename": "^1.6.3",
     "website-scraper": "^4.2.3"
   }
 }
